--- a/Continuous/Continuous.csproj
+++ b/Continuous/Continuous.csproj
@@ -49,7 +49,7 @@
     <None Include="Integration.action.ps1" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Origami.Powershell.Continuous.nuspec">
+    <None Include="Origami.PowerShell.Continuous.nuspec">
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
