--- a/Continuous/Origami.PowerShell.Continuous.nuspec
+++ b/Continuous/Origami.PowerShell.Continuous.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>Origami.PowerShell.Continuous</id>
-    <version>0.0.1</version>
+    <version>0.0.5</version>
     <authors>Bartłomiej Dubas</authors>
     <owners>Bartłomiej Dubas</owners>
 
@@ -12,8 +12,8 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
 
     <description>
-       Provide bootstrap script to help execute continouus actions.
-       It simplify usage of manifest PowerShell modules reaferenced through packages.config.
+       Provide bootstrap script to help execute continuous actions.
+       It simplify usage of manifest PowerShell modules referenced through packages.config.
     </description>
     <copyright>Copyright origami.network 2016</copyright>
 
