--- a/Continuous/Origami.PowerShell.Continuous.nuspec
+++ b/Continuous/Origami.PowerShell.Continuous.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>Origami.PowerShell.Continuous</id>
-    <version>0.1.0-rc</version>
+    <version>0.1.0</version>
     <authors>Bartłomiej Dubas</authors>
     <owners>Bartłomiej Dubas</owners>
 
